# PSCode

./: .gitignore  GEMINI.md  README.md  a.md  build-deploy.ps1  deploy.bat  index.html  package-lock.json  package.json  releasenote.md  vite.config.ts
.github/workflows/: release.yml
scripts/: download-gcc.ps1
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: compile.rs  compiler_detect.rs  fs_ops.rs  mod.rs  settings.rs
src/compiler/: compilerService.ts  types.ts  useCompileRun.ts
src/components/: CommandPalette.tsx  NewProblemModal.tsx  OutputConsole.tsx  Sidebar.tsx  SnippetsModal.tsx  StatusBar.tsx  WorkspaceTree.tsx
src/editor/: MarkdownViewer.tsx  MonacoEditor.tsx  cppFormatter.ts  editorRefStore.ts  editorStore.ts  markdownStore.ts  useEditorShortcuts.ts
src/hooks/: useAppInit.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  ko.json
src/lib/: autoSpacing.ts
src/settings/: SettingsModal.tsx  settingsStore.ts  types.ts
src/snippets/: cppSnippets.ts  registerSnippets.ts
src/testcase/: TestcasePanel.tsx  testcaseStore.ts
src/ui/layout/: AppLayout.tsx  ResizablePanel.tsx  ResizableSplitPanel.tsx
src/ui/stores/: consoleStore.ts  uiStore.ts
src/ui/theme/: tokens.css
src/workspace/: defaultTemplate.ts  filenameUtils.ts  types.ts  workspaceService.ts  workspaceStore.ts
